simplified connected checkmarks

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -50,9 +50,7 @@
               :class => "hide-when-loading"%>
           <i class="icon-loading icon-white"></i>
         </span>
-        <%=image_tag "logos/import-gmail-connected-2x.png",
-            :style => "width: 50px; padding-right: 2px; margin-top: -4px;",
-            :class => "connected inline"%>
+        <i class="icon-ok icon-white connected inline opacity-60" style="margin-top: -1px;"></i>
       </a>
       
       <a id="hotmail_connect_button"
@@ -71,9 +69,7 @@
               :class => "hide-when-loading"%>
           <i class="icon-loading icon-white"></i>
         </span>
-        <%=image_tag "logos/import-hotmail-connected-2x.png",
-            :style => "width: 55px; padding-right: 4px; margin-top: -2px;",
-            :class => "connected"%>
+        <i class="icon-ok icon-white connected inline opacity-60" style="margin-top: -1px;"></i>
       </a>
       
       <a id="yahoo_connect_button" 
@@ -92,9 +88,7 @@
               :class => "hide-when-loading"%>
           <i class="icon-loading icon-white"></i>
         </span>
-        <%=image_tag "logos/import-yahoo-connected-2x.png",
-            :style => "width: 55px; padding-right: 4px; margin-top: -2px;",
-            :class => "connected"%>
+        <i class="icon-ok icon-white connected inline opacity-60" style="margin-top: -1px;"></i>
       </a>
     
     </div> <!-- /import email buttons -->
