--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -430,9 +430,9 @@ ul.notifications li.user-action-box {
 	height: 10px; }
 	
 .import-email-buttons { top: 2px; right: 0; }
-.import-email-buttons .btn img.connected { display: none; }
+.import-email-buttons .btn .connected { display: none; }
 .import-email-buttons .btn.connected { background: #555 !important; box-shadow: none !important;}
-.import-email-buttons .btn.connected img.connected { display: inline-block; }
+.import-email-buttons .btn.connected .connected { display: inline-block; }
 .import-email-buttons .btn.connected span.unconnected { display: none; }
 
 .hotmail-connect { padding-top: 26px; }
@@ -865,10 +865,10 @@ a.feed-intro .highlight { font-weight: bold; }
 .feed .item .panel .panel-contents { background: none; padding: 0; }
 
 .feed .item .panel .user-photo {
-	top: 15px;
+	top: 16px;
 	left: 0;
-	width: 28px; 
-	height: 28px; }
+	width: 42px; 
+	height: 42px; }
 
 .feed .item .panel .title-box {
 	font-weight: normal;
@@ -878,7 +878,7 @@ a.feed-intro .highlight { font-weight: bold; }
 	color: #999;
 	line-height: 140%;
 	padding: 8px 4.8%;
-	padding: 14px 0 8px 34px;
+	padding: 14px 0 8px 50px;
 	margin: 0; }
 	
 .feed .item .panel .title-box .user-name { font-weight: bold; }
