--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -363,6 +363,11 @@ input.error:focus, textarea.error:focus {
 	-o-transition: border-color .15s ease-in;
 	transition: border-color .15s ease-in; }
 	
+.no-shadow {
+  -webkit-box-shadow: none !important;
+     -moz-box-shadow: none !important;
+          box-shadow: none !important; }
+	
 .no-transition {
 	-webkit-transition: none !important;
 	-moz-transition: none !important;
@@ -783,7 +788,12 @@ input.error:focus, textarea.error:focus {
 /* Text Field Bootstrap Overrides
 ==================================================================== */
 
-input[type=text], input[type=password], textarea {
+input[type="search"] {
+    -moz-appearance:    textfield;
+    -webkit-appearance: textfield;
+    appearance:         textfield; }
+
+input[type=text], input[type=password], input[type=search], textarea {
 	width: 100%; 
 	-webkit-appearance: none; 
 	margin-bottom: 0;
@@ -792,21 +802,23 @@ input[type=text], input[type=password], textarea {
 	background: #eee;
 	box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px 0px inset; }
 
-input[type=text]:focus, input[type=password]:focus, textarea:focus { 
+input[type=text]:focus, input[type=password]:focus, 
+input[type=search]:focus, textarea:focus { 
 	background: white; 
 	box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px 0px inset; }
 
-input[type=text], input[type=password] { height: 40px; }
+input[type=text], input[type=password], input[type=search] { height: 40px; }
 textarea { 
 	padding-top: 7px;
 	padding-bottom: 7px; }
 
-input[type=text].m, input[type=password].m { 
+input[type=text].m, input[type=password].m, input[type=search].m { 
 	height: 28px;
 	padding: 0 8px;
 	box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 1px 0px inset; }
 	
-input[type=text].m.load, input[type=password].m.load {
+input[type=text].m.load, input[type=password].m.load,
+ input[type=search].m.load {
 	background: white url('/images/loading/loading-snake-555-right-loading.gif') center right no-repeat; }
 
 
