home adapted to new bootstrap

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -202,7 +202,7 @@
           'javascript:void(0)',
           :id    => 'x_button',
           :class => 'close absolute',
-          :style => 'display: none;'%>
+          :style => 'display: block;'%>
 
 		<input type="text" id="m-search" class="m-search h-medium square border-box no-shadow affix-top"
 		placeholder="Search your network, e.g. 'Apps' or 'Fiction'">
