--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -145,7 +145,7 @@
 
 	<a href="<%=fb_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
-	    class="btn btn-large btn-facebook rounded-3-left shaded-strong relative">
+	    class="btn btn-facebook rounded-3-left shaded-strong relative">
 	  <span class="hide-when-loading">
 	    <%=image_tag "social/f-box.png",
 	    :class => "f-box"%>
@@ -155,7 +155,7 @@
 	</a>
   <a href="<%=tw_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
-	    class="btn btn-large btn-twitter rounded-3-right shaded-strong relative">
+	    class="btn btn-twitter rounded-3-right shaded-strong relative">
 	  <span class="hide-when-loading">
 	    <%=image_tag "social/t-box.png",
 	    :class => "t-box"%>
