--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -25,6 +25,13 @@ a.wiggle:active { margin-top: 2px; margin-bottom: -2px; }
 	height: 100%;
 	margin: 0 auto -72px; }
 	
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 { margin: 0; }
+	
 ul { margin: 0 !important; }
 
 
@@ -76,6 +83,15 @@ h2 { font-size: 26px; }
 
 
 /* ----- popovers ----- */
+
+.popover { 
+	border: none;
+	-webkit-border-radius: 5px !important;
+	-moz-border-radius: 5px !important;
+	border-radius: 5px !important;
+	width: auto;
+	padding: 0;
+	box-shadow: none }
 
 .login .popover { 
 	margin-right: -16px;
@@ -174,16 +190,21 @@ h2 { font-size: 26px; }
 	background: linear-gradient(to bottom,  #ffffff 0%,#dddddd 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dddddd',GradientType=0 ); }
 
+.arrow { border-color: auto; }
+
 .popover.right .arrow { /* login */
 	top: 50%;
-	left: -2px;
+	left: -7px;
 	margin-top: -8px;
+	color: none;
+	border-color: #eee;
+	border-right-color: #eee;
 	border-top: 8px solid transparent;
-	border-right: 8px solid #eee;
+	border-right: 8px solid #eee !important;
 	border-bottom: 8px solid transparent; }
 	
 .popover.bottom .arrow { /* join */
-	top: -2px;
+	top: -7px;
 	left: auto;
 	right: 25px;
 	margin-left: -8px;
@@ -223,6 +244,8 @@ h2 { font-size: 26px; }
 	border-radius: 16px !important;
 	text-shadow: 0 1px 1px rgba(0,0,0, 0.25);
 	vertical-align: top; }
+	
+.sms .popover.right .arrow { left: -2px; }
 	
 .btn-sms:hover { color: white;}
 .btn-sms:active { margin-top: 12px; margin-bottom: -2px; }
