--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -63,6 +63,13 @@ a.light:hover { color: #105e90; }
 a.dark.underlined  { border-bottom: 1px solid #838383; }
 a.light.underlined { border-bottom: 1px solid #8bbede; }
 a.light.underlined:hover { border-color: #87aec7; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 { margin: 0; }
 	
 ul, ol { 
 	margin: 0;
@@ -820,7 +827,7 @@ a.feed-intro .highlight { font-weight: bold; }
 
 .m-wrapper .close {
 	font-size: 28px; 
-	top: 9px; 
+	top: 10px; 
 	right: 8.1597222222%; }
 	
 .m-search:hover .q {
@@ -839,10 +846,10 @@ input.m-search:focus {
 input.m-search:focus { 
 /* 	background: #f5f5f5;  */}
 
-input::-webkit-input-placeholder { color: #bbb; }
-input:-moz-placeholder 					 { color: #bbb; }
-input::-moz-placeholder 	       { color: #bbb; }
-input:-ms-input-placeholder      { color: #bbb; }
+input::-webkit-input-placeholder { color: #b7b7b7; }
+input:-moz-placeholder 					 { color: #b7b7b7; }
+input::-moz-placeholder 	       { color: #b7b7b7; }
+input:-ms-input-placeholder      { color: #b7b7b7; }
 
 .m-search.affix { top: 0; left: 0; width: auto; }
 	
@@ -921,6 +928,7 @@ input:-ms-input-placeholder      { color: #bbb; }
 .item-modal { 
 	width: 520px;
 	margin-left: -260px;
+	margin-top: 0;
 	border: none;
 	top: 9%; }
 
