logged in item refitted given new feed

--- a/app/views/purchases/show/_logged_in.html.erb
+++ b/app/views/purchases/show/_logged_in.html.erb
@@ -31,7 +31,7 @@
 	 </div> <!- /feed-container -->
 
   <div class="feed-container">
-	  <div id="feed" class="feed relative">
+	  <div id="feed" class="feed col-1 relative">
 		</div>
 	</div>
 	
