--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1551,6 +1551,7 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 	margin-top: 1px; }
 
 .modal.classic h4 { 
+	font-size: 14px;
 	color: #555;
 	line-height: 18px;
 	margin-bottom: 0; }
