one display.jst to rule them all #hack

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -190,8 +190,6 @@
 
 <div class="feed-container">
 	
-
-	
 	<div id="m-wrapper" class="m-wrapper relative">
 	
 		 <%=image_tag "m-search-q-2x.png",
@@ -209,7 +207,7 @@
 		
 	</div>
 	
-	<div id="feed" class="feed col-2 relative">
+	<div id="feed" class="feed cols-2 relative">
 	</div> 
 	
 	<div id="feed-spinner" class="feed-loading dark">
