--- a/app/views/purchases/show/_logged_in.html.erb
+++ b/app/views/purchases/show/_logged_in.html.erb
@@ -8,7 +8,7 @@
 
   </div>
   
-	<div class="feed-container" style="border-bottom: 2px solid #EEE;">
+	<div class="feed-container">
 	  <div class="item-row-box border-box" style="">
 	    <%cache ["v6",@purchase.user,"purchases","preview"] do%>
 	      <%@purchase.user.purchases.approved.with_user.
