--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -52,6 +52,9 @@ span.separator:before { content: "•"; }
 .opacity-60-100:hover, .opacity-80-100:hover, 
 .opacity-90-100:hover { opacity: 1; filter: alpha(opacity=100); }
 
+.appear { opacity: 0; filter: alpha(opacity=0); }
+div:hover > .appear { opacity: 1; filter: alpha(opacity=100); }
+
 .pointer { cursor: pointer; }
 
 .fixed    { position: fixed !important;    }
@@ -686,8 +689,8 @@ input.error:focus, textarea.error:focus {
 .btn-gray.pushed, .btn-gray.pushed:hover,
 .btn-gray.load, .btn-gray.load:hover { background: #888; color: white; }	
 
-.btn span.in { display: none; }
-.btn.pushed .in { display: inline; }
+.btn .in         { display: none; }
+.btn.pushed .in  { display: inline-block; }
 .btn.pushed .out { display: none; }
   
 .icon-loading {
@@ -821,7 +824,7 @@ textarea {
 input[type=text].m, input[type=password].m, input[type=search].m { 
 	height: 28px;
 	padding: 0 8px;
-	box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 1px 0px inset; }
+	box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 1px 0px inset; }
 	
 input[type=text].m.load, input[type=password].m.load,
  input[type=search].m.load {
