--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -297,7 +297,7 @@ li { line-height: 1; }
 
 /* -- footer -- */
 
-footer { text-align: right; }
+footer { text-align: center; }
 
 footer, .push {
 	height: 32px;
@@ -711,113 +711,6 @@ a.feed-intro .highlight { font-weight: bold; }
 .float-loader img { width: 20px; }
 
 
-/* --- Feed Grid --- */
-
-.feed-grid-container { 
-	width: 692px; 
-	padding-left: 28px;
-	margin: 72px auto 98px;
-	background: white; }
-	
-.feed-grid-container .feed-loading { margin-left: -16px; }
-
-.feed.grid { padding-top: 8px; }
-
-.feed.grid .item {
-	width: 200px;
-	display: inline-block;
-	font-size: 0;
-	margin: 18px 18px 0px 0px;
-	vertical-align: top;
-	border-bottom: none;
-	padding-top: 0; }
-	
-.feed.grid .item .photo-box {
-	height: 200px;
-	line-height: 200px;
-	padding: 0;
-	background-image: none; }
-
-.feed.grid .item .panel { 
-	padding: 10px 0 0;
-	border: none;
-	min-height: 52px; }
-
-.feed.grid .item .panel .caret {
-	width: 0;
-	height: 0;
-	left: 18px;
-	top: -10px;
-	vertical-align: bottom;
-	border-bottom: 10px solid #f5f5f5;
-	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;
-	border-top: 0 solid transparent;
-	content: ""; }
-	
-.feed.grid .item .panel .panel-contents {
-	padding: 10px;
-	background: #f5f5f5;
-	-webkit-border-radius: 3px !important;
-	-moz-border-radius: 3px !important;
-	border-radius: 3px !important; }
-
-.feed.grid .item .photo-box .actions.top-right {
-	top: 4px;
-	right: 4px; }
-
-.feed.grid .item .photo-box .actions.top-right .btn-small {
-	background: white;
-	height: 16px;
-	padding: 0 1px;
-	line-height: 16px !important;
-	-webkit-transition: none;
-   -moz-transition: none;
-     -o-transition: none;
-        transition: none; }
-
-.feed.grid .item .photo-box .actions.top-right .btn-small:hover { background: #666; }
-
-.feed.grid .item .photo-box .actions.top-right .icon-white { 
-	display: none;
-	opacity: 1;
-	filter: alpha(opacity=100); }
-	
-.feed.grid .item .photo-box .actions.top-right .btn-small:hover .icon-white { display: inline-block; }
-.feed.grid .item .photo-box .actions.top-right .btn-small:hover .icon-black { display: none; }
-	
-.feed.grid .item .photo-box .item-photo {
-	max-height: 200px; }
-
-.feed.grid .item .title-box { 
-	margin-top: 0;
-	text-align: left;
-	font-size: 12px !important;
-	min-height: 0;
-	height: 32px !important;
-	line-height: 140% !important;
-	padding: 0 !important;
-	text-overflow: ellipsis; }
-
-.feed.grid .item .panel .user-photo,
-.feed.grid .item .panel .endorsement-box, 
-.feed.grid .item .interactions,
-.feed.grid span.time { display: none; }
-
-.feed.grid .grid-only { display: block !important; }
-.feed.grid .grid-nowrap { white-space: nowrap; }
-.feed.grid .grid-normal-weight { font-weight: normal; }
-
-
-/* --- Feed Grid No-User-Photo --- */
-
-.feed.grid.no-user-photo .item .panel .title-box { padding-left: 0; }
-.feed.grid.no-user-photo .item .panel .title-box .user-photo { display: none; }
-
-.feed.grid.no-user-name .item .panel .title-box .user-name { display: none; }
-.feed.grid.no-user-bought-pronoun .item .panel .title-box .user-bought-pronoun { display: none; }
-
-
 /* M-Search 
 ==================================================================== */
 
@@ -846,9 +739,6 @@ input.m-search:focus {
 	padding: 0 14.2361111%;
 	background: #f1f1f1; }
 
-input.m-search:focus { 
-/* 	background: #f5f5f5;  */}
-
 input::-webkit-input-placeholder { color: #b7b7b7; }
 input:-moz-placeholder 					 { color: #b7b7b7; }
 input::-moz-placeholder 	       { color: #b7b7b7; }
@@ -856,81 +746,105 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 
 .m-search.affix { top: 0; left: 0; width: auto; }
 
-	
-/* Feed-Item-Col-2
+
+/* Item
 ==================================================================== */
 
-.feed.col-2 { padding: 0 18px; }
+.item { 
+	padding: 24px 28px; 
+	vertical-align: top; }
 
-.feed.col-2 .item {
-	width: 43.4027777777777%;
-	width: 46.296296296296%;
-	margin: 0 10px;
+.photo-box { text-align: center; }
+.photo-box .item-photo { max-height: 360px; }
+
+.actions { line-height: 0; }
+.actions.top    { top: 6px;    }
+.actions.right  { right: 6px;  }
+.actions.bottom { bottom: 6px; }
+.actions.left   { left: 6px;   }
+.actions .btn       { width: 64px; }
+.actions .btn-small { width: auto !important; }
+	
+.btn.like.pushed, .btn.like.pushed:hover { 
+	background: #eee !important; 
+	opacity: 0.6;
+	filter: alpha(opacity=60); }
+
+.details-box { 
+	width: 100%;
+	margin-top: 16px; 
+	padding: 0 0 12px 60px; 
+	font-size: 14px;
+	line-height: 130%;
+	border-bottom: 6px solid #eaeaea; }
+.details-box .user-photo { width: 50px; height: 50px; top: 2px; left: 0; }
+.details-box .user-name  { font-size: 12px; font-weight: bold; }
+.details-box .time       { font-size: 10px; color: #999; padding-left: 3px; }
+.details-box .item-name  { font-size: 14px; color: #444; font-weight: bold; }
+.details-box .store-name { font-size: 12px; color: #999; }
+
+.interactions-box { padding: 0 16px 16px; background: #f6f6f6; }
+.interactions-box input,
+.interactions-box textarea { 
+	background: white;
+	box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 1px 0px inset; }
+
+.endorsement { font-size: 14px; color: #555; line-height: 140%; padding-top: 8px; }
+
+.likes-box {
+	height: 32px;
+	font-size: 14px;
+	line-height: 1;
+	color: #555;
+	padding: 4px 0 0;
+	overflow-y: hidden;
+	white-space: nowrap; }
+.likes-box .text { padding-right: 6px; } 
+.likes-box .num { font-size: 32px; font-weight: bold; }
+.likes-box .user-photo-box {
+	width: 24px;
+	height: 24px; 
 	display: inline-block;
 	vertical-align: top;
-	padding-top: 20px;
-	padding-bottom: 4px;
-	border-bottom: 6px solid #f5f5f5; }
+	margin-top: 4px; }
+.likes-box .user-photo-box .user-photo { width: 24px; height: 24px; }
 
-.feed.col-2 .item .photo-box { 
-	font-size: 11px; color: #999;
-	width: 100%;
-	height: 250px;
-	padding: 0;
-	text-align: center;
-	line-height: 250px; }
+.comments-box { padding-top: 10px; }
 
-.feed.col-2 .item .photo-box .like.btn,
-.feed.col-2 .item .photo-box .comment.btn {
-	width: 48px;
-	height: 28px;
-	line-height: 28px; }
-	
-.feed.col-2 .item .photo-box .like.btn [class^="icon-"],
-.feed.col-2 .item .photo-box .comment.btn [class^="icon-"] { margin-top: -1px; }
-
-/*
-.feed.col-2 .item .photo-box .comment.btn {
-	border-left: 1px solid #ababab; 
-  border-left: 1px solid rgba(0,0,0,0.12); }
-*/
-
-.feed.col-2 .item .photo-box .item-photo { max-height: 250px; }
-.feed.col-2 .item .photo-box .actions.top-left { top: 6px; left: 6px; }
-.feed.col-2 .item .photo-box .actions.top-right { top: 6px; right: 6px; }
-.feed.col-2 .item .photo-box .actions.bottom-right { bottom: 6px; right: 6px;  }
-
-.feed.col-2 .item .panel { background: none; padding: 0; min-height: 68px; /* max-height: 48px; */ }
-.feed.col-2 .item .panel .panel-contents { background: none; padding: 0; }
-
-.feed.col-2 .item .panel a.user-photo {
-	top: 16px;
-	left: 0;
-	width: 42px; 
-	height: 42px; }
-
-.feed.col-2 .item .panel a.user-photo img {
-	width: 42px; 
-	height: 42px;}
-
-.feed.col-2 .item .panel .title-box {
-	font-weight: normal;
-	min-height: 0;
-	font-size: 12px;
-	color: #999;
+.comment-box {
+	min-height: 28px; 
+	margin-bottom: 8px;
+	padding-left: 36px; 
 	line-height: 140%;
-	padding: 8px 4.8%;
-	padding: 14px 0 8px 50px;
-	margin: 0; }
+	clear: both;
+	color: #666; }
 	
-.feed.col-2 .item .panel .title-box .user-name { font-weight: bold; }
-.feed.col-2 .item .panel .title-box .time { padding-left: 2px; font-size: 10px; }
-.feed.col-2 .item .panel .title-box .item-name { display: block; font-weight: bold; color: #444; }
+.comment-box .user-photo { left: 0; top: 0; }
+.comment-box .user-name,
+.comment-box .user-name a {
+	color: #333;
+	line-height: 1;
+	font-weight: bold;
+	margin-bottom: 3px; }
+	
+.add-comment-box input { padding-left: 35px !important; border: none; }
 
-.feed.col-2 .item .interactions { display: none; }
+
+/* Feed + Profile Item (2 Columns)
+==================================================================== */
+
+.cols-2 { padding: 0 18px 24px; }
+.cols-2 .item { width: 250px; display: inline-block; padding: 20px 10px 0; }
+.cols-2 .photo-box { height: 250px; line-height: 250px; }
+.cols-2 .photo-box .item-photo { max-height: 250px; }
+.cols-2 .actions .btn { width: 48px; }
+.cols-2 .details-box { margin-top: 14px; padding: 0 0 12px 50px; font-size: 12px;  }
+.cols-2 .details-box .user-photo { width: 42px; height: 42px; top: 2px; left: 0; }
+.cols-2 .details-box .item-name  { font-size: 12px; }
+.cols-2 .interactions-box { display: none; }
 
 
-/* Item-Modal
+/* Item Modal
 ==================================================================== */
 
 .item-modal { 
@@ -939,10 +853,6 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 	margin-top: 0;
 	border: none;
 	top: 9%; }
-
-.item-modal .modal-body { 
-	padding: 0; 
-	max-height: 610px; }
 
 .item-modal .close {
 	right: -26px;
@@ -962,431 +872,32 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 .modal-backdrop, .modal-backdrop.fade.in {
 	opacity: 0.9;
 	filter: alpha(opacity=90); }
-
-.item-modal .photo-box {
-	width: auto;
-	min-height: 150px;
-	padding: 3.461538461538% 4.615384615% 2.69230%;
-	text-align: center;
-	line-height: 1; }
-
-.item-modal .photo-box .item-photo { max-height: 360px; }
-
-.item-modal .photo-box .actions.top-left     { top: 24px; left: 30px; }
-.item-modal .photo-box .actions.top-right    { top: 24px; right: 30px; } 
-.item-modal .photo-box .actions.bottom-right { bottom: 6px; right: 6px;  }
 	
-.item-modal .panel { padding: 0 4.615384615%; }
-.item-modal .panel .panel-contents { padding: 0; }
-
-/* -- title -- */
-
-.item-modal .panel .title-box {
-	color: #999;
-	font-size: 14px;
-	font-weight: normal;
-	min-height: 48px;
-	line-height: 130%;
-	padding: 0 0 2.307692307692% 60px; }
-
-.item-modal .panel a.user-photo {
-	top: 2px;
-	left: 0;
-	width: 50px; 
-	height: 50px; }
 	
-.item-modal .panel .title-box .user-name { font-weight: bold; font-size: 12px; }
-.item-modal .panel .title-box .time { padding-left: 2px; font-size: 10px; }
-.item-modal .panel .title-box .item-name { display: block; font-weight: bold; color: #444; }
-.item-modal .panel .title-box .store-name { font-size: 12px; }
-	
-.item-modal .interactions { 
-	border-top: 6px solid #eee;
-	background: #f8f8f8; 
-	margin-bottom: 3.461538461538%;
-	padding: 0.76923% 3.461538461538% 4.615384615%; }
-
-/* -- endorsement -- */
-
-.item-modal .panel .endorsement-box {
-	line-height: 140%;
-	padding-top: 4px;
-	color: #555; }
-
-/* -- likes -- */
-
-.item-modal .panel .likes-box {
-	height: 32px;
-	line-height: 1;
-	color: #555;
-	padding: 4px 0 0;
-	overflow-y: hidden;
-	white-space: nowrap; }
-
-.item-modal .panel .likes-box .fader {
-	top: 0;
-	right: 0;
-	bottom: 0;
-	width: 28px;
-	z-index: 500;
-	background: url("/images/fade-right.png") 0 -300px; }
-	
-.item-modal .panel .likes-box .text {
-	padding-right: 6px; } 
-
-.item-modal .panel .likes-box .num {
-	-webkit-font-smoothing: antialiased;
-	font-weight: bold; 
-	font-size: 32px; }
-
-.item-modal .panel .likes-box .user-photo-box {
-	width: 24px;
-	height: 24px; 
-	display: inline-block;
-	vertical-align: top;
-	margin-top: 4px; }
-
-/* -- comments -- */
-
-.item-modal .panel .comments-box { padding-top: 10px; }
-
-.item-modal .panel .comment-box {
-	min-height: 28px; 
-	margin-bottom: 8px;
-	padding-left: 36px; 
-	line-height: 140%;
-	clear: both;
-	color: #666; }
-	
-.item-modal .panel .comment-box .user-photo { left: 0; top: 0; }
-.item-modal .panel .comment-box .user-name,
-.item-modal .panel .comment-box .user-name a {
-	color: #333;
-	line-height: 1;
-	font-weight: bold;
-	margin-bottom: 3px; }
-	
-.item-modal .panel input,
-.item-modal .panel textarea { 
-	background: white;
-	box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 1px 0px inset; }
-	
-.item-modal .panel .add-comment-box input {
-	width: 100%;
-	height: 28px;
-	border: none;
-	background: white;
-	padding-left: 35px;
-	margin-bottom: 0; }
-	
-
-/* Feed-Item-Col-1
+/* Recent Item Row 
 ==================================================================== */
 
-
-.feed.col-1 { /* padding: 0 18px; */ }
-
-.feed.col-1 .item { padding-bottom: 2.69230%; }
-
-.feed.col-1 .photo-box {
-	width: auto;
-	min-height: 150px;
-	padding: 3.461538461538% 4.615384615% 2.69230%;
-	text-align: center;
-	line-height: 1; }
-
-.feed.col-1 .photo-box .item-photo { max-height: 360px; }
-
-.feed.col-1.logged-out .photo-box .actions { display: none; }
-
-.feed.col-1 .photo-box .actions.top-left     { top: 24px; left: 30px; }
-.feed.col-1 .photo-box .actions.top-right    { top: 24px; right: 30px; } 
-.feed.col-1 .photo-box .actions.bottom-right { bottom: 22px; right: 30px;  }
-
-.feed.col-1 .photo-box .btn.comment { display: none; }
+.feed-grid-container { 
+	width: 692px; 
+	padding-left: 28px;
+	margin: 72px auto 98px;
+	background: white; }
 	
-.feed.col-1 .panel { padding: 0 4.615384615%; }
-.feed.col-1 .panel .panel-contents { padding: 0; background: none; }
+.feed-grid-container .feed-loading { margin-left: -16px; }
 
-/* -- title -- */
-
-.feed.col-1 .panel .title-box {
-	color: #999;
-	font-size: 14px;
-	font-weight: normal;
-	min-height: 48px;
-	line-height: 130%;
-	padding: 0 0 2.307692307692% 60px; }
-
-.feed.col-1 .panel a.user-photo {
-	top: 2px;
-	left: 0;
-	width: 50px; 
-	height: 50px; }
-	
-.feed.col-1 .panel .title-box .user-name { font-weight: bold; font-size: 12px; }
-.feed.col-1 .panel .title-box .time { padding-left: 2px; font-size: 10px; }
-.feed.col-1 .panel .title-box .item-name { display: block; font-weight: bold; color: #444; }
-.feed.col-1 .panel .title-box .store-name { font-size: 12px; }
-	
-.feed.col-1 .interactions { 
-	border-top: 6px solid #eee;
-	background: #f8f8f8; 
-	margin-bottom: 3.461538461538%;
-	padding: 0.76923% 3.461538461538% 4.615384615%; }
-
-/* -- endorsement -- */
-
-.feed.col-1 .panel .endorsement-box {
-	line-height: 140%;
-	padding-top: 4px;
-	color: #555; }
-
-/* -- likes -- */
-
-.feed.col-1 .panel .likes-box {
-	height: 32px;
-	line-height: 1;
-	color: #555;
-	padding: 4px 0 0;
-	overflow-y: hidden;
-	white-space: nowrap; }
-
-.feed.col-1 .panel .likes-box .fader {
-	top: 0;
-	right: 0;
-	bottom: 0;
-	width: 28px;
-	z-index: 500;
-	background: url("/images/fade-right.png") 0 -300px; }
-	
-.feed.col-1 .panel .likes-box .text {
-	padding-right: 6px; } 
-
-.feed.col-1 .panel .likes-box .num {
-	-webkit-font-smoothing: antialiased;
-	font-weight: bold; 
-	font-size: 32px; }
-
-.feed.col-1 .panel .likes-box .user-photo-box {
-	width: 24px;
-	height: 24px; 
-	display: inline-block;
-	vertical-align: top;
-	margin-top: 4px; }
-
-/* -- comments -- */
-
-.feed.col-1 .panel .comments-box { padding-top: 10px; }
-
-.feed.col-1 .panel .comment-box {
-	min-height: 28px; 
-	margin-bottom: 8px;
-	padding-left: 36px; 
-	line-height: 140%;
-	clear: both;
-	color: #666; }
-	
-.feed.col-1 .panel .comment-box .user-photo { left: 0; top: 0; }
-.feed.col-1 .panel .comment-box .user-name,
-.feed.col-1 .panel .comment-box .user-name a {
-	color: #333;
-	line-height: 1;
-	font-weight: bold;
-	margin-bottom: 3px; }
-	
-.feed.col-1 .panel input,
-.feed.col-1 .panel textarea { 
-	background: white;
-	box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 1px 0px inset; }
-	
-.feed.col-1 .panel .add-comment-box input {
-	width: 100%;
-	height: 28px;
-	border: none;
-	background: white;
-	padding-left: 35px;
-	margin-bottom: 0; }
-	
-
-/* Item
-==================================================================== */
-	
-.item { background: white; }
-
-.item .photo-box {
-	width: auto;
-	min-height: 150px;
-	padding: 4.615384615%;
-	text-align: center;
-	line-height: 1; }
-
-.item .photo-box .item-photo { max-height: 354px; }
-
-.item .actions { line-height: 0; }
-.item .actions.hover { display: none; }
-.item:hover .actions.hover { display: block; }
-
-.item .photo-box .actions.top-left     { top: 24px; left: 24px;     }
-.item .photo-box .actions.top-right    { top: 24px; right: 24px;    }
-.item .photo-box .actions.bottom-right { bottom: 28px; right: 28px; }
-.item .photo-box .actions.bottom-left  { bottom: 24px; left: 24px;  }
-
-.hover-appear { 
-	opacity: 0;
-	filter: alpha(opacity=0); }
-
-.photo-box:hover .hover-appear { 	
-	opacity: 1;
-	filter: alpha(opacity=100);
-	-webkit-transition: opacity .25s ease-in;
-	-moz-transition: opacity .25s ease-in;
-	-o-transition: opacity .25s ease-in;
-	transition: opacity .25s ease-in; }
-	
-.item .photo-box .like.btn {
-	width: 64px;
-	height: 32px; }
-	
-.like.btn.pushed .icon-heart { 
-	display: inline-block;
-	opacity: 0.6;
-	filter: alpha(opacity=60); } 
-	
-.like.btn.btn-silver.light.pushed, .like.btn.btn-silver.light.pushed:hover { background: #eee !important; } 
-
-	
-.item .panel { padding: 0 28px 4.615384615%; }
-
-.item .panel .panel-contents {
-	background: #eee;
-	padding: 2.966101694915%; }
-	
-.item .panel .panel-contents .caret {
-	width: 0;
-	height: 0;
-	left: 19px;
-	top: -16px;
-	vertical-align: bottom;
-	border-bottom: 16px solid #eee;
-	border-left: 16px solid transparent;
-	border-right: 16px solid transparent;
-	border-top: 0 solid transparent;
-	content: ""; }
-
-/* -- title -- */
-
-.item .panel .title-box {
-	color: #555;
-	font-weight: bold;
-	min-height: 48px;
-	line-height: 140%;
-	padding: 0 34px 0 50px;
-	margin-top: -3px; }
-
-.item .panel .title-box .user-photo { left:0; top: 3px; }
-.item .panel .title-box .em { /* font-weight: bold; */ }
-.item .panel .title-box .time { 
-	font-size: 12px; 
-	font-weight: normal;
-	color: #999;
-	white-space: nowrap; }
-
-/* -- title link-disabled -- */
-
-.feed.link-disabled .item-photo { 
-	max-height: 264px;
-	cursor: default;  }
-
-.feed.link-disabled .title-box a {
-	cursor: default;
-	color: #555;
-	font-weight: bold;
-	border-bottom: none;
-	padding: 0 !important;
-	background: none !important; }
-	
-/* -- endorsement -- */
-
-.item .panel .endorsement-box {
-	line-height: 140%;
-	padding-top: 4px;
-	color: #555; }
-
-/* -- likes -- */
-
-.item .panel .likes-box {
-	height: 32px;
-	line-height: 1;
-	color: #555;
-	padding: 4px 0 0;
-	overflow-y: hidden;
-	white-space: nowrap; }
-
-.item .panel .likes-box .fader {
-	top: 0;
-	right: 0;
-	bottom: 0;
-	width: 28px;
-	z-index: 500;
-	background: url("/images/fade-right.png") 0 -300px; }
-	
-.item .panel .likes-box .text {
-	padding-right: 6px; } 
-
-.item .panel .likes-box .num {
-	-webkit-font-smoothing: antialiased;
-	font-weight: bold; 
-	font-size: 32px; }
-
-.item .panel .likes-box .user-photo-box {
-	width: 24px;
-	height: 24px; 
-	display: inline-block;
-	vertical-align: top;
-	margin-top: 4px; }
-
-/* -- comments -- */
-
-.item .panel .comments-box { padding-top: 10px; }
-
-.item .panel .comment-box {
-	min-height: 28px; 
-	margin-bottom: 8px;
-	padding-left: 36px; 
-	line-height: 140%;
-	clear: both;
-	color: #666; }
-	
-.item .panel .comment-box .user-photo { left: 0; top: 0; }
-.item .panel .comment-box .user-name,
-.item .panel .comment-box .user-name a {
-	color: #333;
-	line-height: 1;
-	font-weight: bold;
-	margin-bottom: 3px; }
-	
-.item .panel input,
-.item .panel textarea { 
-	background: white;
-	box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 1px 0px inset; }
-	
-.item .panel .add-comment-box input {
-	width: 100%;
-	height: 28px;
-	border: none;
-	background: white;
-	padding-left: 35px;
-	margin-bottom: 0; }
+.feed.grid { padding-top: 8px; }
 
 
-/* Logged-in item
+
+/* Recent Item Row 
 ==================================================================== */
 
 .item-row-box {
 	background: white;
+	text-align: center;
 	padding: 14px;
-	overflow: hidden; }
+	overflow: hidden;
+	border-bottom: 6px solid #eee; }
 	
 .item-row-box div.item { 
 	display: inline;
