switching to relative identification of elements within purchase display.

--- a/app/views/purchases/show/_logged_in.html.erb
+++ b/app/views/purchases/show/_logged_in.html.erb
@@ -28,7 +28,7 @@
 	    <%end%>
 	
 	  </div> <!-- /item-row-box -->
-	 </div> <!- /feed-container -->
+	 </div> <!-- /feed-container -->
 
   <div class="feed-container">
 	  <div id="feed" class="feed col-1 relative">
