--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -606,7 +606,7 @@ a.feed-intro .highlight { font-weight: bold; }
 	
 .feed-container { margin: 0 -28px; }
 	
-.feed { background: white; }
+.feed { background: white; text-align: center; }
 
 
 /* --- Importer --- */
@@ -776,6 +776,7 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 	padding: 0 0 12px 60px; 
 	font-size: 14px;
 	line-height: 130%;
+	text-align: left;
 	border-bottom: 6px solid #eaeaea; }
 .details-box .user-photo { width: 50px; height: 50px; top: 2px; left: 0; }
 .details-box .user-name  { font-size: 12px; font-weight: bold; }
@@ -833,8 +834,7 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 /* Feed + Profile Item (2 Columns)
 ==================================================================== */
 
-.cols-2 { padding: 0 18px 24px; }
-.cols-2 .item { width: 250px; display: inline-block; padding: 20px 10px 0; }
+.item.cols-2 { width: 250px; display: inline-block; padding: 20px 10px 0; }
 .cols-2 .photo-box { height: 250px; line-height: 250px; }
 .cols-2 .photo-box .item-photo { max-height: 250px; }
 .cols-2 .actions .btn { width: 48px; }
