--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -747,11 +747,12 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 .m-search.affix { top: 0; left: 0; width: auto; }
 
 
-/* Item
+/* Item (Default - Large)
 ==================================================================== */
 
 .item { 
 	padding: 24px 28px; 
+	text-align: left;
 	vertical-align: top; }
 
 .photo-box { text-align: center; }
@@ -776,7 +777,6 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 	padding: 0 0 12px 60px; 
 	font-size: 14px;
 	line-height: 130%;
-	text-align: left;
 	border-bottom: 6px solid #eaeaea; }
 .details-box .user-photo { width: 50px; height: 50px; top: 2px; left: 0; }
 .details-box .user-name  { font-size: 12px; font-weight: bold; }
@@ -831,17 +831,39 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 .add-comment-box input { padding-left: 35px !important; border: none; }
 
 
-/* Feed + Profile Item (2 Columns)
+/* Item (Medium)
 ==================================================================== */
 
-.item.cols-2 { width: 250px; display: inline-block; padding: 20px 10px 0; }
-.cols-2 .photo-box { height: 250px; line-height: 250px; }
-.cols-2 .photo-box .item-photo { max-height: 250px; }
-.cols-2 .actions .btn { width: 48px; }
-.cols-2 .details-box { margin-top: 14px; padding: 0 0 12px 50px; font-size: 12px;  }
-.cols-2 .details-box .user-photo { width: 42px; height: 42px; top: 2px; left: 0; }
-.cols-2 .details-box .item-name  { font-size: 12px; }
-.cols-2 .interactions-box { display: none; }
+.item.medium { width: 250px; display: inline-block; padding: 20px 10px 0; }
+.medium .photo-box { height: 250px; line-height: 250px; }
+.medium .photo-box .item-photo { max-height: 250px; }
+.medium .actions .btn { width: 48px; }
+.medium .details-box { margin-top: 14px; padding: 0 0 12px 50px; font-size: 12px;  }
+.medium .details-box .user-photo { width: 42px; height: 42px; top: 2px; left: 0; }
+.medium .details-box .item-name  { font-size: 12px; }
+.medium .interactions-box { display: none; }
+
+
+/* Item (Small)
+==================================================================== */
+
+.item.small { width: 200px; display: inline-block; padding: 20px 10px 0; }
+.small .photo-box { height: 200px; line-height: 200px; }
+.small .photo-box .item-photo { max-height: 200px; }
+.small .actions .btn { width: 48px; }
+.small .details-box { margin-top: 14px; padding: 0 0 12px 50px; font-size: 12px;  }
+.small .details-box .user-photo { width: 42px; height: 42px; top: 2px; left: 0; }
+.small .details-box .item-name  { font-size: 12px; }
+.small .interactions-box { display: none; }
+
+
+/* Item (No User)
+==================================================================== */
+
+.no-user .details-box { padding-left: 0;  }
+.no-user .details-box .user-photo,
+.no-user .details-box .user-name,
+.no-user .details-box .time  { display: none; }
 
 
 /* Item Modal
@@ -874,16 +896,15 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 	filter: alpha(opacity=90); }
 	
 	
-/* Recent Item Row 
+/* Importer Item Review
 ==================================================================== */
 
 .feed-grid-container { 
-	width: 692px; 
-	padding-left: 28px;
+	width: 696px;
 	margin: 72px auto 98px;
 	background: white; }
 	
-.feed-grid-container .feed-loading { margin-left: -16px; }
+.feed-grid-container .feed-loading { /* margin-left: -16px; */ }
 
 .feed.grid { padding-top: 8px; }
 
