start of feed search partial.

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -198,7 +198,7 @@
        
        <%=link_to  '&times;',
             'javascript:void(0)',
-            :id    => 'x_button',
+            :id    => 'purchase_search_close',
             :class => 'close absolute',
             :style => 'display: block;'%>
 
