display.jst css fixes

--- a/app/views/headers/_default.html.erb
+++ b/app/views/headers/_default.html.erb
@@ -22,7 +22,7 @@
                   :alt => self.current_user.full_name%>
           </a>
 
-          <input type="text" placeholder="Search for people" class="m search border-box rounded-2" id="users_search_query" 
+          <input type="text" placeholder="Search for people" class="m search h-medium border-box rounded-2" id="users_search_query" 
             style="float: left;">
           
 <!--
