--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -772,9 +772,9 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 	filter: alpha(opacity=60); }
 
 .details-box { 
-	width: 100%;
 	margin-top: 16px; 
-	padding: 0 0 12px 60px; 
+	padding: 0 0 12px 60px;
+	min-height: 73px; /* in case of no store */
 	font-size: 14px;
 	line-height: 130%;
 	border-bottom: 6px solid #eaeaea; }
@@ -838,7 +838,7 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 .medium .photo-box { height: 250px; line-height: 250px; }
 .medium .photo-box .item-photo { max-height: 250px; }
 .medium .actions .btn { width: 48px; }
-.medium .details-box { margin-top: 14px; padding: 0 0 12px 50px; font-size: 12px;  }
+.medium .details-box { margin-top: 14px; min-height: 65px; padding: 0 0 12px 50px; font-size: 12px;  }
 .medium .details-box .user-photo { width: 42px; height: 42px; top: 2px; left: 0; }
 .medium .details-box .item-name  { font-size: 12px; }
 .medium .interactions-box { display: none; }
