col-1 renamed no-close

--- a/app/views/purchases/show/_logged_out.html.erb
+++ b/app/views/purchases/show/_logged_out.html.erb
@@ -4,7 +4,7 @@
 	</div> 
 
 	<div class="feed-container" style="">
-	  <div id="feed" class="feed col-1 logged-out relative">
+	  <div id="feed" class="feed no-close logged-out relative">
 	  </div>
   </div>
             
